--- a/README.html
+++ b/README.html
@@ -22,18 +22,20 @@
 <li>Tools for visualizing assembly graphs (e.g. <a href="http://www.graphviz.org/">GraphViz</a>, <a href="http://zvtm.sourceforge.net/zgrviewer.html">ZGRViewer</a>)</li>
 <li>16S Taxonomic classifiers (e.g. <a href="http://sourceforge.net/projects/rdp-classifier/">RDP Classifier</a>) </li>
 </ul>
-<p>This file contains information on how to build and install the SEAStAR tools. For information on using the tools themselves, please see the SEAStAR user guide.</p>
+<p>You can find out more about SEAStAR on its <a href="http://armbrustlab.ocean.washington.edu/SEAStAR">Armbrust Lab Homepage</a> and obtain news regarding updates and related info by following <a href="https://twitter.com/SEAStAR_meta">@SEAStAR_meta</a> on Twitter. </p>
+<p>This file contains information on how to build and install the SEAStAR tools. For information on using the tools themselves, please see the included SEAStAR User Guide file.</p>
 <h2>License</h2>
 <p>SEAStAR is released under the GPLv3 license, a copy of which is provided in the included file &quot;COPYING&quot;. By using this software, you are agreeing to be bound by the terms of this license.</p>
 <h2>Installation</h2>
+<p>The instructions that follow are for building the SEAStAR tools from source code. However, if you&#39;d initially like to try out SEAStAR by working through our &quot;Quick Start&quot; tutorial, we provide a &quot;ready-to-go&quot; <a href="http://armbrustlab.ocean.washington.edu/node/305">SEAStAR Virtual Machine appliance</a> image that includes all of the necessary tools and a working sample dataset that can be run within VirtualBox without the need to compile any of the tools on your computer. This pre-built VM is intended as an aid to learning and we strongly advise against (and will not provide any help for) trying to use it for analysis of real datasets.</p>
 <p>SEAStAR is designed to build and run on any 64-bit Unix-like system, including Linux and Mac OS X version 10.7 or later. Many components of SEAStAR are optimized for multiple CPU cores and require substantial memory. We recommend a machine with a minimum of 4 CPU cores and 32 GB of RAM to run these tools.  Depending on your datasets and what you are trying to do (e.g. de novo assembly) you may require a substantially more powerful machine than this minimum recommendation. </p>
 <p>The SEAStAR package has dependencies on a small number of software packages that you (or your system administrator) may need to install or update. The process described in the next section will notify you if your system is missing any of these components.</p>
 <h4>Required Tools:</h4>
 <ul>
 <li><a href="http://gcc.gnu.org">gcc</a> -- version 4.4 or newer, supporting <a href="http://openmp.org">OpenMP</a>. </li>
 <li><a href="http://www.cmake.org">cmake</a> -- version 2.8 or newer</li>
-<li><a href="http://nodejs.org">node.js</a> -- version 0.8 or newer</li>
-<li><a href="http://www.gnu.org/software/gawk/">gawk</a> -- version 3.1.5 or newer</li>
+<li><a href="http://nodejs.org">node.js</a> -- version 0.8 or newer (version 0.10 or newer recommended)</li>
+<li><a href="http://www.gnu.org/software/gawk/">gawk</a> -- version 3.1.5 or newer (version 4.0 or newer recommended))</li>
 </ul>
 <p>Additional instructions are available below for fulfilling these requirements for Mac OS X, and for programmers wishing to make modifications to the included source code.</p>
 <p>Once you have the above packages: To build SEAStAR using Unix style command line tools, run the following commands from the directory where all files generated in the build process should be placed (including executables). This is your &quot;destination tree&quot;. </p>
