--- a/README.html
+++ b/README.html
@@ -34,7 +34,7 @@
 <ul>
 <li><a href="http://gcc.gnu.org">gcc</a> -- version 4.4 or newer, supporting <a href="http://openmp.org">OpenMP</a>. </li>
 <li><a href="http://www.cmake.org">cmake</a> -- version 2.8 or newer</li>
-<li><a href="http://nodejs.org">node.js</a> -- version 0.8 or newer (version 0.10 or newer recommended)</li>
+<li><a href="http://nodejs.org">node.js</a> -- version 0.10 or newer</li>
 <li><a href="http://www.gnu.org/software/gawk/">gawk</a> -- version 3.1.5 or newer (version 4.0 or newer recommended))</li>
 </ul>
 <p>Additional instructions are available below for fulfilling these requirements for Mac OS X, and for programmers wishing to make modifications to the included source code.</p>
